Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67267

QDoc does not warn about undocumented namespace

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.11.1
    • 5.10.1
    • Build tools: qdoc
    • None
    • d103cc5be1cbc6d114e7fd3d9a43092ad58888ab

      In order to generate documentation for classes within namespace the namespace needs to be documented. However when the class/function within the namespace is documented and the namespace is not, qdoc does not generate the documentation but does not issue any warnings.

      I believe qdoc should issue a warning for undocumented namespace if it finds documentation for entities within it.

      EDIT:

      I have provided sample directory to test this with qdoc 5.11 (or 5.10). As provided it will work fine but if you remove ns.qdoc file it will show the problem (or rather, it will show nothing which is the problem). Simply run `qdoc qdoc-test.qdocconf`

        For Gerrit Dashboard: QTBUG-67267
        # Subject Branch Project Status CR V

            gbk Martin Smith (Qt)
            resurr3ction Michael Vlach
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes